...
                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                </imageView>
                                                <view hidden="YES" alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKZ-Sc-8jd">
                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </view>
                                                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconCheck" translatesAutoresizingMaskIntoConstraints="NO" id="FtH-Mm-rU4">
                                                    <rect key="frame" x="125" y="3" width="24" height="24"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="24" id="8eY-CF-1fW"/>
                                                        <constraint firstAttribute="height" constant="24" id="Wlt-QN-Lh2"/>
                                                    </constraints>
                                                </imageView>
...
                    <navigationItem key="navigationItem" id="RKN-bu-4JB">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="phP-FD-UoW">
                            <connections>
                                <action selector="cancelClickedWithSender:" destination="IGE-zl-huj" id="qRb-sk-TzA"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="dUO-yP-3V0">
                            <connections>
                                <action selector="doneClickedWithSender:" destination="IGE-zl-huj" id="l9q-Va-yQD"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
                            <constraint firstItem="MHF-Iv-8HH" firstAttribute="top" secondItem="y4a-cL-6Tx" secondAttribute="bottom" constant="-64" id="Ba4-Yr-uvh"/>
                            <constraint firstAttribute="trailing" secondItem="MHF-Iv-8HH" secondAttribute="trailing" id="QV8-jy-jaI"/>
                            <constraint firstItem="MHF-Iv-8HH" firstAttribute="bottom" secondItem="yPc-A1-WG4" secondAttribute="top" id="fo8-d8-Mpn"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="iTm-Mn-1bk">
                        <barButtonItem key="rightBarButtonItem" title="Send" id="yog-1M-RMB">
                            <connections>
                                <action selector="doneClickedWithSender:" destination="LeO-W4-wDH" id="lDM-WI-Qg4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
