...
        setUpNavigationBar()
        super.viewWillAppear(true)
    }
    
    func setUpNavigationBar() {
        let nav = self.navigationController?.navigationBar
        nav?.topItem?.title = "Select 2 picture"
        nav?.barStyle = UIBarStyle.default
        nav?.tintColor = UIColor.black
    }
    
    //MARK: IBAction
    @IBAction func cancelClicked(sender: UIButton) {
...
