...
        super.viewWillAppear(true)
    }
    
    //MARK: cutom method
    func setUpNavigationBar() {
        let nav = self.navigationController?.navigationBar
        nav?.topItem?.title = "Select 2 Flickr Photos"
        nav?.barStyle = UIBarStyle.default
        nav?.tintColor = UIColor.black
    }
    
    //MARK: IBAction
    @IBAction func cancelClicked(sender: UIButton) {
...
